--- a/res/layout/wether_layout.xml
+++ b/res/layout/wether_layout.xml
@@ -9,13 +9,29 @@
         android:layout_height="50dp"
         android:background="#484E61">
         
+        <Button 
+            android:id="@+id/bt_back_to_choose"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/home"/>"
+        
         <TextView 
             android:id="@+id/tv_city_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:textColor="#fff"
-            android:textSize="24sp"/>"
+            android:textSize="24sp"/>
+        
+        <Button 
+            android:id="@+id/bt_refresh"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginRight="10dp"
+            android:layout_centerVertical="true"
+            android:background="@drawable/refresh"/>
         
     </RelativeLayout>
     
