更改查询天气的方式，直接输入城市名进行查找

--- a/res/layout/wether_layout.xml
+++ b/res/layout/wether_layout.xml
@@ -13,7 +13,7 @@
             android:id="@+id/bt_back_to_choose"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
             android:layout_marginLeft="10dp"
             android:background="@drawable/home"/>"
         
@@ -30,7 +30,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginRight="10dp"
-            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
             android:background="@drawable/refresh"/>
         
     </RelativeLayout>
