--- a/res/layout/wether_layout.xml
+++ b/res/layout/wether_layout.xml
@@ -14,6 +14,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_alignParentLeft="true"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             android:background="@drawable/home"/>"
         
@@ -29,7 +30,8 @@
             android:id="@+id/bt_refresh"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="10dp"            
+            android:layout_marginTop="10dp"
             android:layout_alignParentRight="true"
             android:background="@drawable/refresh"/>
         
@@ -90,6 +92,7 @@
                 
                 <TextView 
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
